--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
-    "golden:check": "node --no-warnings --loader ts-node/esm src/dev/goldenCheck.ts"
+    "golden:check": "tsx src/dev/goldenCheck.ts"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.3.3",
     "vite": "^7.3.1",
     "vitest": "^4.0.18"
